--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,9 @@
+spring:
+  application:
+    name: FOOD-SERVICE
+  zipkin:
+    base-url: http://localhost:9411/
+
 eureka:
   client:
     service-url:
