--- a/application.properties
+++ b/application.properties
@@ -9,5 +9,54 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.cloud.compatibility-verifier.enabled=false
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 //eureka.instance.prefer-ip-address=true
+
+spring.application.name=api-gateway
+server.port=8765
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+logging.level.root= INFO
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator= INFO
+logging.level.org.springframework.cloud.gateway= TRACE
+
+## CUSTOMER-SUBSCRIBER-SERVICE CONFIGURATION
+spring.cloud.gateway.routes[0].id=customer-subscriber-service
+spring.cloud.gateway.routes[0].uri=lb://customer-subscriber-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/foodhub/csapi/**
+
+## FOOD-SERVICE CONFIGURATION
+spring.cloud.gateway.routes[1].id=food-service
+spring.cloud.gateway.routes[1].uri=lb://food-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/foodhub/fsapi/**
+
+## ORDER-SERVICE CONFIGURATION
+spring.cloud.gateway.routes[2].id=order-service
+spring.cloud.gateway.routes[2].uri=lb://order-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/foodhub/osapi/**
+
+##BILLING-SERVICE CONFIGURATION
+spring.cloud.gateway.routes[3].id=billing-service
+spring.cloud.gateway.routes[3].uri=lb://billing-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/foodhub/bsapi/**
+
+##DELIVERY-SERVICE CONFIGURATION
+spring.cloud.gateway.routes[4].id=delivery-service
+spring.cloud.gateway.routes[4].uri=lb://delivery-service
+spring.cloud.gateway.routes[4].predicates[0]=Path=/foodhub/dsapi/**
+
+## DISCOVERY-SERVER CONFIGURATION
+spring.cloud.gateway.routes[5].id=eureka-server
+spring.cloud.gateway.routes[5].uri=http://localhost:8761
+spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[5].filters[0]=SetPath=/
+
+## DISCOVERY-SERVER Static Resources Route
+spring.cloud.gateway.routes[6].id=eureka-server
+spring.cloud.gateway.routes[6].uri=http://localhost:8761
+spring.cloud.gateway.routes[6].predicates[0]=Path=/eureka/**
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-realm
