--- a/application.properties
+++ b/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update 
-spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.url=jdbc:mysql://localhost:3306/foodhub?createDatabaseIfNotExist=true
 
 spring.cloud.compatibility-verifier.enabled=false
 
